# eonapi

./: .dockerignore  .gitignore  =2.8.0  =7.0.0  CHANGELOG.md  CLAUDE.md  COMPATIBILITY_NOTES.md  DEPLOYMENT.md  Dockerfile  PYPI_PUBLISH.md  README.md  docker-compose.yml  docker-entrypoint.sh  fly.toml  main.py  pyproject.toml
.github/: copilot-instructions.md
eonapi/: __init__.py  api.py  cli.py  database.py  server.py
tests/: __init__.py  test_cli_store.py  test_database.py
