[project]
name = "eonapi"
version = "0.5.0"
description = "CLI tool for retrieving and analyzing electricity/gas consumption data from Eon Next API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Tom", email = "tom@naive.co.uk"}
]
keywords = [
    "eon",
    "eon-next",
    "energy",
    "electricity",
    "gas",
    "consumption",
    "smart-meter",
    "api",
    "cli"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0.0",
    "httpx>=0.23.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
ui = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/tomdyson/eonapi"
Repository = "https://github.com/tomdyson/eonapi"
Issues = "https://github.com/tomdyson/eonapi/issues"
Documentation = "https://github.com/tomdyson/eonapi#readme"

[project.scripts]
eonapi = "eonapi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eonapi"]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.2.0",
    "pytest>=7.0.0",
]
